# CheckingBee

./: README.md
CheckingBee/: CMakeLists.txt  main.cpp
Widgetsss/: CMakeLists.txt  main.cpp  spellCheck.h
